--- a/environments/staging/environment.yaml
+++ b/environments/staging/environment.yaml
@@ -6,7 +6,7 @@ app:
   # Set the build version ID to deploy for the "Build, deploy, and run" 
   # scenario. If the value is set to an empty string ("") the application
   # is not deployed.
-  version: ""
+  version: "dcbf767d-ce50-46c2-adcd-18e82f812dca"
   
   # Set the Maven coordinates of the Maven artifact to deploy for the 
   # "Deploy, and run" scenario.
